[package]
name = "circle_time_table"
version = "0.1.0"
authors = ["Mineau Jean-Marie <mineau.jean.marie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.3"

[dependencies.sdl2]
version = "0.32.1"
